--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -8,21 +8,40 @@
   }
   
   .project h1 {
-    margin-top: 200px;
+    margin-top: 100px;
     color: #3e497a;
     font-size: 35px;
   }
   .project img {
-    width: 700px;
+    width: 500px;
     border-radius: 10px;
   }
   
   .project p {
     font-size: 40px;
     color: #3e497a;
+    /* width: 100%; */
   }
   
   .project svg {
     font-size: 60px;
     color: #3e497a;
+  }
+
+  @media only screen and (max-width: 800px){
+    .project h1{
+      margin-top: 0;
+    }
+
+    .project img {
+      width: 350px;
+      border-radius: 10px;
+    }
+    
+    .project p{
+      font-size: 17px;
+      text-align: center;
+    }
+
+
   }
